--- a/wordpress/pwnscriptum/docker-compose.yml
+++ b/wordpress/pwnscriptum/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 services:
  web:
    image: vulhub/wordpress:4.6
+   restart: always   
    depends_on:
     - mysql
    environment: 
@@ -13,5 +14,6 @@ services:
     - "8080:80"
  mysql:
    image: mysql:5
+   restart: always      
    environment: 
     - MYSQL_ROOT_PASSWORD=root
